--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
     <img src="logo.png" alt="Logo">
 </div>
 <div class="navbar">
-    <a href="#about">About Us</a>
-    <a href="#events">Events</a>
-    <a href="#contact">Contact Us</a>
+    <a href="#about.html">About Us</a>
+    <a href="#events.html">Events</a>
+    <a href="#contact.html">Contact Us</a>
 </div>
 
 <section id="contact">
@@ -41,38 +41,6 @@
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
     </div>
-</section>
 
-    <script>
-        document.querySelector('form').addEventListener('submit', function(e) {
-            e.preventDefault();
-
-            let formData = new FormData(e.target);
-            let data = {};
-
-            for (let [key, value] of formData.entries()) {
-                data[key] = value;
-            }
-
-            fetch('submit_form.php', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            }).then(function(response) {
-                if (response.ok) {
-                    return response.text();
-                } else {
-                    throw new Error('Error: ' + response.statusText);
-                }
-            }).then(function(responseText) {
-                // Handle the response from the server
-                console.log(responseText);
-            }).catch(function(error) {
-                console.error(error);
-            });
-        });
-    </script>
 </body>
 </html>
