--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
     <img src="logo.png" alt="Logo">
 </div>
 <div class="navbar">
-    <a href="#about.html">About Us</a>
-    <a href="#events.html">Events</a>
-    <a href="#contact.html">Contact Us</a>
+    <a href="#/index/about.html">About Us</a>
+    <a href="#/index/events.html">Events</a>
+    <a href="#/index/contact.html">Contact Us</a>
 </div>
 
 <section id="contact">
