--- a/events.html
+++ b/events.html
@@ -18,7 +18,7 @@
         <img src="logo.png" alt="Logo">
     </div>
     <div class="navbar">
-        <a href="#about">About Us</a>
-        <a href="#events">Events</a>
-        <a href="#contact">Contact Us</a>
+        <a href="about.html">About Us</a>
+        <a href="events.html">Events</a>
+        <a href="contact.html">Contact Us</a>
     </div>
