--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <img src="logo.png" alt="Logo">
 </div>
 <div class="navbar">
+    <a href="index.html">Home</a>
     <a href="about.html">About Us</a>
     <a href="events.html">Events</a>
     <a href="contact.html">Contact Us</a>
